--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,2 @@
-[package]
-name = "richelieu"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-yew = { version = "0.21.0", features = ["csr"] }
+[workspace]
+members = ["client", "server"]
