--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.33.0", features = ["full"]}
+axum = "0.6.20"
+tower-http = { version = "0.4.4", features = ["fs"] }
+serde = {version = "1.0.189", features = ["derive"]}
+serde_json = "1.0.107"
+
+[dev-dependencies]
+anyhow = "1.0.75"
+httpc-test = "0.1.6"
