--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew = { version = "0.21.0", features = ["csr"] }
+yew = {git = "https://github.com/yewstack/yew/", features = ["csr"]}
 gloo = "0.10.0"
 serde = "1.0.189"
 serde_json = "1.0.107"
