--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -12,3 +12,4 @@ serde = "1.0.189"
 serde_json = "1.0.107"
 wasm-bindgen = "0.2.87"
 web-sys = "0.3.64"
+stylist = { version = "0.13.0", features = ["yew_integration", "yew_use_style", "yew", "macros", "stylist-macros"] }
