--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,10 +7,19 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.33.0", features = ["full"]}
+# Axum
 axum = "0.6.20"
 tower-http = { version = "0.4.4", features = ["fs"] }
+tower-cookies = "0.9.0"
+# Serde / json
 serde = {version = "1.0.189", features = ["derive"]}
 serde_json = "1.0.107"
+serde_with = "3.4.0"
+# Others
+strum_macros = "0.25.3"
+lazy-regex = "3.0.2"
+async-trait = "0.1.74"
+uuid = {version = "1.4.1", features = ["v4", "fast-rng"]}
 
 [dev-dependencies]
 anyhow = "1.0.75"
