--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.107"
 wasm-bindgen = "0.2.87"
 web-sys = "0.3.64"
 stylist = { version = "0.13.0", features = ["yew_integration", "yew_use_style", "yew", "macros", "stylist-macros"] }
+surrealdb = "1.0.0"
