--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.33.0", features = ["full"]}
 # Axum
-axum = "0.6.20"
+axum = { version = "0.6.20", features = ["macros"] }
 tower-http = { version = "0.4.4", features = ["fs"] }
 tower-cookies = "0.9.0"
 # Serde / json
@@ -19,7 +19,11 @@ serde_with = "3.4.0"
 strum_macros = "0.25.3"
 lazy-regex = "3.0.2"
 async-trait = "0.1.74"
-uuid = {version = "1.4.1", features = ["v4", "fast-rng"]}
+uuid = {version = "1.4.1", features = ["v4", "fast-rng", "serde"]}
+log = "0.4.20"
+anyhow = "1.0.75"
+chrono = "0.4.31"
+surrealdb = "1.0.0"
 
 [dev-dependencies]
 anyhow = "1.0.75"
